@@ -1,5 +1,5 @@
 .header {
-    margin-bottom:40px;
+    margin-bottom:20px;
 }
 
 .header_current {
@@ -9,7 +9,7 @@
 }
 
 .logo {
-   background:url(/images/stackprinter_banner2.png) no-repeat;
+   background:url(/images/stackprinter_banner2.png) no-repeat 0 0 #fff;
    height:70px;
    width:513px;
    margin-top:90px;
@@ -58,21 +58,25 @@ a:visited {
 #user_selection_container{
     margin: auto;
     width:300px;
+    margin-top:50px;
 }
 
 #input_container_question {
     margin: auto;
     text-align:center;
+    margin-top:25px;
 }
 
 #input_container_favorites {
     margin: auto;
    text-align:center;
+   margin-top:25px;
 }
 
 #input_container_topvoted {
     margin: auto;
     text-align:center;
+    margin-top:25px;
 }
 
 #input_wrapper {
