@@ -231,7 +231,7 @@ def favorites():
         yield '', join_('                              </select>\n')
         yield '', join_('                          </div>\n')
         yield '', join_('                          <div class="button">\n')
-        yield '', join_('                              <input id="favorites_button" type="button" value="Get questions"/>\n')
+        yield '', join_('                              <input type="image" id="favorites_button" src="/images/getquestions.png" onmouseover="this.src=\'/images/getquestions_MouseOver.png\';" onmouseout="this.src=\'/images/getquestions.png\';" />\n')
         yield '', join_('                          </div>                                        \n')
         yield '', join_('                      </div>\n')
         yield '', join_('                  </form>\n')
@@ -582,7 +582,7 @@ def index():
         yield '', join_('                         </select>\n')
         yield '', join_('                     </div>\n')
         yield '', join_('                     <div class="button">\n')
-        yield '', join_('                         <input id="question_button" type="button" name="format" value="Print"/>\n')
+        yield '', join_('                         <input type="image" id="question_button" src="/images/print.png" onmouseover="this.src=\'/images/print_MouseOver.png\';" onmouseout="this.src=\'/images/print.png\';" />\n')
         yield '', join_('                     </div>\n')
         yield '', join_('                  </div>\n')
         yield '', join_('              </form>\n')
@@ -680,7 +680,7 @@ def topvoted():
         yield '', join_('                            jQuery.cookie("SERVICE_TOPVOTED", jQuery("#service").val() , { expires: 50 })\n')
         yield '', join_('                                jQuery("#topvoted_form").submit();\n')
         yield '', join_('                        }else{\n')
-        yield '', join_('                                jQuery("input_main").focus();                      \n')
+        yield '', join_('                                jQuery("#input_main").focus();                      \n')
         yield '', join_('                                return false;                                \n')
         yield '', join_('                        }                                                    \n')
         yield '', join_('                });\n')
@@ -708,7 +708,7 @@ def topvoted():
         yield '', join_('                      </select>\n')
         yield '', join_('                  </div>\n')
         yield '', join_('                  <div class="button">\n')
-        yield '', join_('                      <input id="topvoted_button" type="button" value="Get questions"/>\n')
+        yield '', join_('                      <input type="image" id="topvoted_button" src="/images/getquestions.png" onmouseover="this.src=\'/images/getquestions_MouseOver.png\';" onmouseout="this.src=\'/images/getquestions.png\';" />\n')
         yield '', join_('                  </div>\n')
         yield '', join_('              </div>\n')
         yield '', join_('          </form>                          \n')
