@@ -60,7 +60,7 @@ $def with (message = None)
                               </select>
                           </div>
                           <div class="button">
-                              <input id="favorites_button" type="button" value="Get questions"/>
+                              <input type="image" id="favorites_button" src="/images/getquestions.png" onmouseover="this.src='/images/getquestions_MouseOver.png';" onmouseout="this.src='/images/getquestions.png';" />
                           </div>                                        
                       </div>
                   </form>
