@@ -86,7 +86,7 @@ $def with (counter)
                          </select>
                      </div>
                      <div class="button">
-                         <input id="question_button" type="button" name="format" value="Print"/>
+                         <input type="image" id="question_button" src="/images/print.png" onmouseover="this.src='/images/print_MouseOver.png';" onmouseout="this.src='/images/print.png';" />
                      </div>
                   </div>
               </form>
